# scrapyd-config

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
scrapyd_config/: cli.py  service.py  utils.py
